Closed Bug 177250 Opened 22 years ago Closed 22 years ago

crash during / after Palm Sync

Categories

(MailNews Core Graveyard :: Palm Sync, defect)

x86
Windows NT
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rdayal, Assigned: rdayal)

References

Details

(Keywords: crash)

Attachments

(1 file)

Crashes either during or after palm sync has been seen during external mozilla community testing and using of test builds. More details of these crashes can be found on the meta bug #155417. This bug tracks the fixes for those crashes.
Palm Sync requires inter process communication between the Palm's HotSync Manager process which loads Mozilla conduit and Mozilla process. Native MS COM is used for this IPC. Since this is a two way communication, with Mozilla sending back updates to its AB back to the conduit that writes it on to the handheld device, MS COM's out parameters are required. For in parameters usual memory management works fine, however in case of out parameters special memory management is required using OLE memory management routines. But again in debug builds this is not mandatory since the debug proxy-stub generated by MS COM MIDL and MS COM takes care of the memory access appropriately. However, this leads to memory access issues since the out parameters' data needs to be marshalled which is not guaranteed to work correctly if these OLE memory management routines are 'not' used, thus causing memory overwrites and crashes as we saw in bug #155417 appearing randomly.
Severity: normal → critical
Keywords: crash
Blocks: 155417
This patch fixes the crashes seen during palm sync Mozilla community testing the details of which are on the meta bug #155417. The patch uses OLE memory management routines instead of standard memory management routines for MS COM Palm Sync interface "out parameters". Also as per the rules of out-process COM memory management rules the allocation of memory for "out parameters" is done by the called component and the memory is freed by the caller after it finishes using the data returned. Thus moved the CleanUpABCOMCardStruct routine from the Mozilla Palm Sync Support module to the Mozilla Conduit and other related code.
QA Contact: nbaca → meehansqa
I had requested Matthew Rasnake, who tested in depth and reported the crashes on bug #155417, to test out the new binaries with this fix. And he saw that all his crashes are eliminated. In his own words: " I've tested the 10/22 build with the files you sent to pop in as replacements. i'm happy to say that the new files do appear to have eliminated all the crashing i was seeing. she appears stable as a rock now." :) Sean can u please r= this one, thanks.
Comment on attachment 104472 [details] [diff] [review] fix for the crash and also for category names with whitespaces r=ssu
Attachment #104472 - Flags: review+
Attachment #104472 - Flags: superreview+
Thanks Sean for your review.
Thanks very much David for your super review.
Comment on attachment 104472 [details] [diff] [review] fix for the crash and also for category names with whitespaces a=roc+moz for trunk
Attachment #104472 - Flags: approval+
fix already checked in. Marking as fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: Address Book → Palm Sync
Trunk build 2003-02-20: WinXP Verified Fixed. This has been fixed for awhile.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
Product: MailNews Core → MailNews Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: