Bug #177250 fix for crash during / after palmsync

The fix is for using the OLE memory management routines instead of the usual ones
for the 'out-parameters' of the MS COM IPalmSync interface used for IPC
between the conduit loaded in the HotSync Manager process and the Mozilla process.
The fix has also been tested by mozilla community person who mostly saw these crashes.

r=ssu, sr=bienvenu, a=roc+moz.